--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -7,8 +7,8 @@ block styles
     link(rel="stylesheet", href="/static/styles/snake.css")
 
 block scripts
-   script(src="/static/scripts/keys.js")
-    //script(src="/static/scripts/snake.js")
+    script(src="/static/scripts/keys.js")
+    script(src="/static/scripts/snake.js")
 
 block content
     div.menu.menu-visible
@@ -40,7 +40,7 @@ block content
             div.live
             div.live
         
-        //div.direct-container
+        div.direct-container
             div.left-direct(data="left" onclick="detectKey('LEFT')")
             div.top-direct(data="top" onclick="detectKey('TOP')")
             div.right-direct(data="right" onclick="detectKey('RIGHT')")
@@ -48,4 +48,4 @@ block content
 
             div.enter-bottom(data="enter" onclick="detectKey('ENTER')") ENTER
             div.esc-bottom(data="enter" onclick="detectKey('ESC')") ESC
-        //
+        
