--- a/views/user/list.pug
+++ b/views/user/list.pug
@@ -16,3 +16,4 @@ block content
                     img(src=val.googlePhoto, alt="", srcset="")
                 div.users-name= val.googleDisplayName
                 div.users-point= val.point + ' Point'
+                div.users-point-record= val.sessionPoint + ' Point'
