--- a/views/user/list.pug
+++ b/views/user/list.pug
@@ -5,7 +5,7 @@ block title
 
 block styles
     link(rel="stylesheet", href="/static/styles/snake.css")
-    link(rel="stylesheet", href="/static/styles/userlist.css")
+    link(rel="stylesheet", href="/static/styles/userList.css")
 
 block content
     div.users-container
